@@ -88,10 +88,8 @@ extern int periph_interface1_active;
 /* Is the Interface II active */
 extern int periph_interface2_active;
 
-#ifdef HAVE_LIBDSK_H
 /* Is the +D active */
 extern int periph_plusd_active;
-#endif			/* #ifdef HAVE_LIBDSK_H */
 
 int periph_setup( const periph_t *peripherals_list, size_t n );
 void periph_setup_kempston( periph_present present );
