@@ -187,7 +187,6 @@
 #define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_INSERT 253
 #define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECT 254
 #define IDM_MENU_MEDIA_DISK_TRDOS_DRIVEB_EJECTANDWRITE 255
-#ifdef HAVE_LIBDSK_H
 #define IDM_MENU_MEDIA_DISK_D 256
 #define IDM_MENU_MEDIA_DISK_D_DRIVE1 257
 #define IDM_MENU_MEDIA_DISK_D_DRIVE1_INSERT 258
@@ -197,7 +196,6 @@
 #define IDM_MENU_MEDIA_DISK_D_DRIVE2_INSERT 262
 #define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECT 263
 #define IDM_MENU_MEDIA_DISK_D_DRIVE2_EJECTANDWRITE 264
-#endif
 #define IDM_MENU_MEDIA_CARTRIDGE 265
 #define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK 266
 #define IDM_MENU_MEDIA_CARTRIDGE_TIMEXDOCK_INSERT 267
