@@ -2138,3 +2138,8 @@
 20070928 disk/{Makefile.am,crc.[ch],disk.[ch],fdd.[ch],plusd.[ch],wd1770.[ch]},
 	 event.[ch]: new WD17xx emulation, with support for non-uniform sector
 	 layouts (Gergely Szasz).
+20070928 Makefile.am,configure.in,event.c,fuse.c,menu.c,menu_data.dat,
+	 periph.[ch],printer.c,tape.c,ui/{gtk/gtkui.c,options.dat,
+	 win32/{menu_data.[ch],menu_data.rc,win32ui.c}},ui.c,utils.c,
+	 widget/menu.c,z80/{coretest.c,z80_ops.c}: make libdisk.a no longer
+	 depend on libdsk (Stuart).
